--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #e5e5e5;
   display: flex;
   padding-top: 5rem;
@@ -61,4 +61,21 @@ body {
 
 .done {
   background: linear-gradient(90deg, #84fab0 0%, #8fd3f4 100%);
+}
+.hold {
+  border: 1px solid rgb(251, 251, 251);
+  background-color: #4f95e6;
+  color: rgb(215, 218, 250);
+  font-weight: 600;
+}
+.hide {
+  display: none;
+}
+.hovered {
+  /* border-top: 2px solid #0417c8; */
+  /* margin-top: 20px; */
+  background-color: #53cddd1c;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  
 }
